[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpbench"
version = "0.1.0"
description = "Runtime behavior benchmark, observability toolkit, and AgentCert reporting for MCP servers and agent tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "MCPBench contributors" }]
keywords = ["mcp", "agents", "observability", "benchmark", "tool-calls", "evals"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6.0.1,<7",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0.12,<7",
  "mypy>=1.10,<2",
]
otel = [
  "opentelemetry-sdk>=1.25,<2",
  "opentelemetry-exporter-otlp>=1.25,<2",
]
providers = []
mcp = []

[project.scripts]
mcpbench = "mcpbench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
packages = ["mcpbench"]
